--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myModule">
    <head>
+     <script src = "script/angular.js"></script>
+     <script src = "script/angular.min.js"></script>
      <meta charset="utf-8">
      <title>Hello Deepa </title>
    </head>
    <body>
-      <h1> Hello Deepa, How are you? </h1>
-
+      <div ng-controller="myController">
+        {{ message }}
+</div>
    </body>
 </html>
