--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="myModule">
    <head>
-     <script src = "script/angular.js"></script>
-     <script src = "script/angular.min.js"></script>
+     <script src = "angular.js"></script>
+     <script src = "myfile.js"></script>
      <meta charset="utf-8">
      <title>Hello Deepa </title>
    </head>
